fixed line spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,7 @@ p {
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 10px;
+    line-height: 1.75;
 }
 
 .connect {
